updated CH2 principles and revised other sections a bit

--- a/guidelinesWP/01-chap1.Rmd
+++ b/guidelinesWP/01-chap1.Rmd
@@ -1,29 +1,24 @@
-# INTRODUCTION {#intro}
+# Introduction {#intro}
 
 ## Background
 
 
 Amendments to the Canadian Fisheries Act (2019) include new Fish Stocks provisions that introduce legal
-obligations to manage stocks to promote sustainability and avoid limit reference points, LRPs [@dfoScienceAdvicePrecautionary2021]. The provisions also require plans to rebuild fish stocks that have declined to, or below, an LRP while taking into account the biology of the fish and environmental conditions facing the stock. These obligations apply to major fish stocks that are prescribed under regulations. These revisions reinforce the previously established DFO policies to manage stocks in line with the precautionary approach, including [The Fishery Decision Making Framework Incorporating the Precautionary Approach](https://www.dfo-mpo.gc.ca/reports-rapports/regs/sff-cpd/precaution-eng.htm)[@dfoFisheryDecisionMakingFramework2009], also known as DFO's Precautionary Approach Framework within the [Sustainable Fisheries Framework](https://www.dfo-mpo.gc.ca/reports-rapports/regs/sff-cpd/overview-cadre-eng.html) and Canada's [Wild Salmon Policy](https://www.pac.dfo-mpo.gc.ca/fm-gp/salmon-saumon/wsp-pss/policy-politique-eng.html) [@dfoCanadaPolicyConservation2005].
+obligations to manage stocks to promote sustainability and avoid limit reference points, LRPs [@dfoScienceAdvicePrecautionary2021]. The provisions also require plans to rebuild fish stocks that have declined to, or below, an LRP while taking into account the biology of the fish and environmental conditions facing the stock. These obligations apply to major fish stocks that are prescribed under regulations. These revisions reinforce the previously established DFO policies to manage stocks in line with the precautionary approach, including [The Fishery Decision Making Framework Incorporating the Precautionary Approach](https://www.dfo-mpo.gc.ca/reports-rapports/regs/sff-cpd/precaution-eng.htm)[@dfoFisheryDecisionMakingFramework2009], also known as DFO's Precautionary Approach Framework within the [Sustainable Fisheries Framework](https://www.dfo-mpo.gc.ca/reports-rapports/regs/sff-cpd/overview-cadre-eng.html) and Canada's [Wild Salmon Policy](https://www.pac.dfo-mpo.gc.ca/fm-gp/salmon-saumon/wsp-pss/policy-politique-eng.html) [@dfoCanadaPolicyConservation2005a].
 
 
-Under DFO's Precautionary Approach Framework, LRPs represent the stock status below which serious harm is occurring to the stock. At this stock status level, there may also be resultant impacts to the ecosystem, associated species and a long-term loss of fishing opportunities [@dfoFisheryDecisionMakingFramework2009]. Serious harm to stocks are generally described in terms of impaired productivity, where declines are irreversible or only slowly reversible, e.g., due to allee effects [@kronlundSelectionRoleLimit2018]. Serious harm can occur due to depensatory mortality (or allee effects) that occur because of, for example, increased predation rates or inability to find mates at very low abundances [@chenIncorporatingAlleeEffects2002a]. Because allee effects are infrequent observed among marine fish species [@keithPopulationDynamicsMarine2012] and rarely detected for Pacific salmon (but see @cunninghamSizeSelectivityPredation2013), a biological basis for serious harm is often difficult to identify. 
+Under DFO's Precautionary Approach Framework, LRPs represent the stock status below which serious harm is occurring to the stock. At this stock status level, there may also be resultant impacts to the ecosystem, associated species and a long-term loss of fishing opportunities [@dfoFisheryDecisionMakingFramework2009]. Serious harm to stocks are generally described in terms of impaired productivity, where declines are irreversible or only slowly reversible [@kronlundSelectionRoleLimit2018]. Serious harm can occur due to depensatory mortality (or allee effects) that occur because of, for example, increased predation rates or inability to find mates at very low abundances [@chenIncorporatingAlleeEffects2002a]. Because allee effects are only infrequently observed among marine fish species [@keithPopulationDynamicsMarine2012], and rarely detected for Pacific salmon (but see @cunninghamSizeSelectivityPredation2013), a biological basis for serious harm is often difficult to identify. 
 
-Furthermore, the definition of serious harm from @dfoFisheryDecisionMakingFramework2009 indicates that LRPs should be *above* the level where serious harm occurs, not at the level where it is occurring, and that long-term losses should be avoided. Also, this definition mentions possible impacts on other ecosystem components. Defining the level before serious harm occurs to a species or ecosystem is a pervasive challenge as harm is often not identified until it is already occurring [@hilbornQuantitativeFisheriesStock1986].
+Furthermore, the definition of serious harm from @dfoFisheryDecisionMakingFramework2009 indicates that LRPs should be *above* the level where serious harm occurs, not at the level where it is occurring, and that long-term losses should be avoided.  Defining the level before serious harm occurs to a species or ecosystem is a pervasive challenge as harm is often not identified until it is already occurring [@hilbornQuantitativeFisheriesStock1986]. Also, this definition of serious harm mentions possible impacts on other ecosystem components, which are often challenging to identify because of limited data and poor understanding of mechanisms driving declines in productivity (but see @chagarisEcologicalReferencePoints2020).
 
-For Pacific salmon, Canada's Wild Salmon Policy, WSP, is DFO's implementation of the Precautionary Approach Framework for Pacific salmon and informs the development of LRPs. The goal of the WSP is to restore and maintain healthy and diverse salmon populations and their habitats for the benefit and enjoyment of the people of Canada in perpetuity [@dfoCanadaPolicyConservation2005]. One objective of the WSP is to safeguard the genetic diversity of wild Pacific salmon by maintaining and protecting, Conservation Units, defined as a "group of wild salmon sufficiently isolated from other groups that, if extirpated is very unlikely to recolonize naturally within an acceptable time frame, such as a human lifetime or a specified number of salmon generations" (DFO 2005). 
+Canada's Wild Salmon Policy, WSP, represents DFO's implementation of the Precautionary Approach Framework for Pacific salmon. The goal of the WSP is to restore and maintain healthy and diverse salmon populations and their habitats for the benefit and enjoyment of the people of Canada in perpetuity [@dfoCanadaPolicyConservation2005a]. One objective of the WSP is to safeguard the genetic diversity of wild Pacific salmon by maintaining and protecting, Conservation Units, defined as a "group of wild salmon sufficiently isolated from other groups that, if extirpated is very unlikely to recolonize naturally within an acceptable time frame, such as a human lifetime or a specified number of salmon generations" (DFO 2005). 
 
-Differences in adaptive traits among CUs results in diversity in CU-level responses to threats and environmental drivers.  Portfolio effects have been established for numerous salmon stocks, defined as population aggregates containing population and life-history diversity which produce temporally stable recruitment because of the complementary or independent dynamics among sub-populations [@schindlerPopulationDiversityPortfolio2010a]. Population and life-history diversity can buffer species from environmental variability and contribute to long-term stability through differing responses to environmental changes, e.g., those anticipated under climate warming. Deterioration of portfolio effects have been observed for Pacific salmon in Canada, in part due to fishing practices that ignored underlying CU structure and associated biodiversity [@pricePortfolioSimplificationArising2021a].
+Differences in adaptive traits among CUs results in diversity in CU-level responses to threats and environmental drivers. Portfolio effects have been established for numerous salmon stocks, defined as population aggregates containing population and life-history diversity which produce temporally stable recruitment because of the complementary or independent dynamics among sub-populations [@schindlerPopulationDiversityPortfolio2010a]. Population and life-history diversity can buffer species from environmental variability and contribute to long-term stability through differing responses to environmental changes, e.g., those anticipated under climate warming. Deterioration of portfolio effects have been observed for Pacific salmon in Canada, in part due to fishing practices that ignored underlying population structure (e.g., structure at the CU level) and associated biodiversity [@pricePortfolioSimplificationArising2021a].
 
 Under the WSP, status of individual CUs is represented by comparing status indicators to biological benchmarks delineating three zones of status, green, amber, and red. These zones represent increasing conservation concern from green to red requiring increasing management intervention. The lower benchmark, delineating the red and amber zones, is intended to be at the level to "ensure there is a substantial buffer between it and any level of abundance that could lead to a CU being considered at risk of extinction by COSEWIC", the Committee on the Status of Endangered Wildlife in Canada (DFO 2005; Holt et al. 2009). One recommended lower benchmark on spawning abundances is the abundance resulting in recovery to $S_{MSY}$ in one salmon generation under equilibrium conditions, $S_{gen}$ [@holtEvaluationBenchmarksConservation2009]. 
 
 
-<!--KH addition below-->
-
-Although the traditional application of the precautionary approach for the management of Pacific salmon has been focused on setting lower management benchmarks for individual salmon CUs [dfoCanadaPolicyConservation2005], the revised fisheries act includes language indicating that a single LRP may be needed for each "Major Fish Stock" [@dfoScienceAdvicePrecautionary2021]. In the context of Pacific salmon, "Major Fish Stocks" are defined as Salmon Stock Management Units (SMUs), which are groups of CUs that are managed as a unit to achieve joint status.  This provision created the need for the development of methodologies to estimate LRPs for management at the SMU level, while considering the need to maintain all CUs within an SMU above their lower management benchmarks. The present work expands on the previous work by providing guidance on establishing LRPs for management of Pacific salmon SMUs. 
-
-<!--CH: where should I put this next sentence?-->
-Given the similar intent of LRPs defined by DFO's Precautionary Approach Framework and lower benchmarks under the WSP, lower benchmarks can be used as proxies for LRPs but applied at the scale of CUs instead of SMUs. Our challenge is to identify LRPs that integrate status represented by WSP benchmarks across component CUs to the scale of SMUs. 
+Under the WSP, the assessment of Pacific salmon has focused on setting benchmarks for individual salmon CUs [@dfoCanadaPolicyConservation2005a], the revised Fisheries Act includes language indicates that a single LRP may be required for each "Major Fish Stock" [@dfoScienceAdvicePrecautionary2021]. In the context of Pacific salmon, "Major Fish Stocks" are defined as Stock Management Units (SMUs), which are groups of CUs that are managed as a unit to achieve joint status.  This provision created the need for the development of methodologies to estimate LRPs for management at the SMU level, while considering the need to maintain all CUs within an SMU above their lower benchmarks. The present work expands on the previous work by providing guidance on establishing LRPs for management of Pacific salmon SMUs.  Given the similar intent of LRPs defined by DFO's Precautionary Approach Framework and lower benchmarks under the WSP, lower benchmarks can be used as proxies for LRPs but applied at the scale of CUs instead of SMUs. Our challenge is to identify LRPs that integrate status represented by WSP benchmarks across component CUs to the scale of SMUs. 
 
 
 
@@ -35,23 +30,35 @@ CH: I think we should keep benchmarks as biological values as defined in the WSP
 
 LRPs are commonly used in the assessment and management for marine fisheries where they are used to identify and communicate statuses and inform harvest control rules. Reviews of the application of reference points and harvest control rules can be found in @kvamsdalHarvestControlRules2016 and @puntHarvestControlRules2010. @dowlingEmpiricalHarvestStrategies2015 reviewed the use of harvest control rules and management procedures in data-poor fisheries. In Canada, @sheltonLimitsOverfishingReference2002 provided an overview of the implementation of the precautionary approach and LRPs before the publication of DFO's Precautionary Approach Framework in 2009. They highlight that, at that point in time, there was limited evidence of the implementation of the precautionary approach in Canadian fisheries. In contrast, 12 years after the publication of DFO's Precautionary Approach Framework, a review by @marentetteSpecificationPrecautionaryApproach2021 showed that the principles of the Framework, including the adoption of LRPs, are now widespread in the management of Canadian stocks. This review was based on a survey of 177 Canadian stocks of cultural, economic and/or environmental importance, excluding salmonids and transboundary stocks. They identified that 102 stocks had adopted LRPs, although the method used to estimate the LRPs varied considerably among stocks. @kronlundConsiderationsDesignRebuilding2021 also reviewed the use and definition of LRPs in the context of Canadian and international Policy. They highlight the importance of embedding LRPs into management objectives with associated tolerance (probability) statements, e.g., "stock status should be maintained above the LRP 90% of the time", as the tolerance statement is required to render the LRP operational. Diagnosing where serious harm is occurring is a pervasive challenge when identifying LRPs, as is addressing the impacts of non-stationarity in underlying biological processes such as natural mortality [@kronlundConsiderationsDesignRebuilding2021].
 
-For Pacific salmon, @portleyLimitReferencePoints2014 reviewed the use of LRPs and biological benchmarks for Pacific salmon stocks in the U.S. (Alaska and Pacific Northwest), Canada, Russia, and Japan. They highlight the role of LRPs and lower benchmarks in allowing for cross-jurisdictional comparisons of sustainability. In Canada, @chaputConsiderationsDefiningReference2012 reviewed the use of reference points, including lower benchmarks and LRPs, in the assessment and management of salmonids and other semelparous species. While biological assessments under the WSP are implemented at the scale of Conservation Unit, CU, fisheries management often operates at larger scales, aggregating over multiple CUs. For some stock aggregates, harvest control rules are developed to achieve a low probability of  individual CUs breaching their lower benchmark, among other socio-economic considerations, e.g., Fraser River sockeye salmon [@chaputConsiderationsDefiningReference2012]. This approach supports management of weak stocks and is aligned with DFO's Precautionary Approach Framework [@dfoFisheryDecisionMakingFramework2009].
+Less frequently, multidimensional approaches that aggregate status over numerous biological characteristics have been applied to indicate serious harm to marine fish species. These approaches are particularly relevant when traditional abundance-based metrics are not estimable or not applicable or when data availability is limited [@dowlingEmpiricalHarvestStrategies2015]. Multidimensional approaches allow for consideration of multiple data sources often including expert knowledge to integrate conflicting metrics within assessments. For example, multidimensional reference points have been applied to Snow Crab in Canada, where data on CPUE, egg clutches and discards are integrated in stock assessments [@mullowneyBasisPrecautionaryApproach2018].
+
+For Pacific salmon, @portleyLimitReferencePoints2014 reviewed the use of LRPs and biological benchmarks in the US (Alaska and Pacific Northwest), Canada, Russia, and Japan. They highlight the role of LRPs and lower benchmarks in allowing for cross-jurisdictional comparisons of sustainability. In Canada, @chaputConsiderationsDefiningReference2012 reviewed the use of reference points, including lower benchmarks and LRPs, in the assessment and management of salmonids and other semelparous species. 
 
 
-Less frequently, multidimensional approaches that aggregate status over numerous biological characteristics have been applied to marine fisheries. These approaches are particularly relevant when traditional abundance-based metrics are not estimable or not applicable or when data availability is limited [@dowlingEmpiricalHarvestStrategies2015]. Multidimensional approaches allow for consideration of multiple data sources often including expert knowledge to integrate conflicting metrics within assessments. For example, multidimensional reference points have been applied to Snow Crab in Canada, where data on CPUE, egg clutches and discards are integrated in stock assessments [@mullowneyBasisPrecautionaryApproach2018]. For Pacific salmon, the multidimensional assessment approach introduced by (Pestal et al.) is used to approximate the integrated WSP status assessments for Pacific salmon at the scale of CUs (Holt et al. in review). 
-
-<!--CH next pgh inserted here. as per KH's suggestion Does it fit?-->
-Status assessments under the WSP generally integrate data across numerous dimensions of population characteristics, including current spawner abundances, short and long-term trends in abundances, distribution of spawning, and fishing mortality relative to productivity [@holtEvaluationBenchmarksConservation2009].  This multidimensional framework for assessing assessment status under the WSP has been adopted widely in Canada (e.g., Fraser River sockeye salmon [@grantEvaluationUncertaintyFraser2011, @grantIntegratedBiologicalStatus2013, @grant2017FraserSockeye2020], IFR coho [@dfoWildSalmonPolicy2015], Southern BC chinook salmon [@dfoIntegratedBiologicalStatus2016]), though single-metric approaches in which spawning biomass is compared with an abundance-based benchmark, have been used as proxies for status outside of DFO [@pacificsalmonfoundationMethodsAssessingStatus2020] and occasionally within DFO (e.g., Barkley Sockeye Salmon @chaputConsiderationsDefiningReference2012). 
+Under Canada's WSP, status assessments generally integrate data across numerous dimensions of population characteristics, including current spawner abundances, short and long-term trends in abundances, distribution of spawning, and fishing mortality relative to productivity, which benchmarks along each metric [@holtEvaluationBenchmarksConservation2009].  This multidimensional framework for assessing assessment status under the WSP requires an expert-driven process to integrate sometimes conflicting metrics, and has been implemented for numerous stocks in Canada (e.g., Fraser River Sockeye Salmon [@grantEvaluationUncertaintyFraser2011, @grantIntegratedBiologicalStatus2013, @grant2017FraserSockeye2020], Interior Fraser River Coho Salmon [@dfoWildSalmonPolicy2015], and Southern BC Chinook Salmon [@dfoIntegratedBiologicalStatus2016]). One challenge in implementing these assessment is high demand on time and staff resources. Based on the consistencies that emerged from the assessments where this approach has been applied,  (Pestal et al. in prep) have developed an algorithm for combining metrics to derive an overall biological status to approximate the integrated WSP status assessments for Pacific salmon at the scale of CUs. 
 
 
+In some cases, single-metric approaches in which spawning biomass is compared with an abundance-based benchmark, have been used as proxies for status outside of DFO [@pacificsalmonfoundationMethodsAssessingStatus2020] and occasionally within DFO (e.g., Barkley Sockeye Salmon @chaputConsiderationsDefiningReference2012). While biological assessments under the WSP are implemented at the scale of Conservation Unit, CU, fisheries management often operates at larger scales, aggregating over multiple CUs. For some stock aggregates, harvest control rules are developed to achieve a low probability of  individual CUs breaching their lower benchmark on spawner abundances, among other socio-economic considerations, e.g., Fraser River sockeye salmon [@chaputConsiderationsDefiningReference2012]. This approach supports management of weak stocks and is aligned with DFO's Precautionary Approach Framework [@dfoFisheryDecisionMakingFramework2009].
 
-Although the application of the precautionary approach for the management of Pacific salmon has focused on setting biological benchmarks for individual salmon CUs [@dfoCanadaPolicyConservation2005], the revised fisheries act includes language indicating that a single LRP may be needed for each "Major Fish Stock" [@dfoScienceAdvicePrecautionary2021]. In the context of Pacific salmon, "Major Fish Stocks" are defined as Salmon Stock Management Units (SMUs), which are groups of CUs that are managed as a unit to achieve joint status.  This provision creates the need for the development of methodologies to estimate LRPs for management at the SMU level, while considering the risk of component CUs dropping below their lower benchmarks. The present work expands on the previous work on biological benchmarks for Pacific salmon by providing guidance on establishing LRPs for Pacific salmon SMUs. 
+
+<!--KH: 
+- Are there examples where aggregate abundance-based LRPs are used for in-season HCRs?  E.g., once an escapement goal has been met, surplus production can be harvested? I'm not sure how often this applies to the SMU level though. Does Fraser Sockeye do anything like this?
+CH: I think the pgh above starts to get at this, though let me know if you think we should expand more.
+
+- KH: Also, is it worth mentioning cases like Nass / Skeena Sockeye were abundance-based LRPs are required for other management processes (PST), and there is a desire to identify aggregate-abundance based LRPs for those processes that have a high probability of maintaining CU-level abundances above red.  
+CH: I added this to CH4, step 7, when deciding if aggregate-abundance based LRPs are necessary. Let me know if you think it should be here too
+-->
+
+
+
 
 ## Alternative spatial scales
 
-The Fish Stock provision pertain to the management of fisheries. For Pacific salmon, threats occur at a range of spatial scales from local habitat disturbances impacting local spawning habitat, to regional-scale climate changes. Also, multiple levers are used by managers to achieve objectives for Pacific salmon which extend beyond fisheries, including habitat restoration and hatchery enhancement, which also occur at a variety of spatial scales.  Indeed, for many SMUs, fisheries have been limited in recent years [@grantStateCanadianPacific2020], such that habitat and hatchery management are playing an increasingly dominant role in management responses. These decisions require stock assessments and responses at a hierarchy of spatial scales from a watershed-level within CUs to larger aggregates of CUs at regional-scales, sometimes across Pacific salmon species. The LRPs presented here are applied at the SMU scale, though could also be applied at smaller or larger scales to inform a variety management decisions.
+The Fish Stock provision pertain to the management of fisheries. For Pacific salmon, threats occur at a range of spatial scales from local habitat disturbances impacting local spawning habitat, to regional-scale climate changes. Also, multiple levers are used by managers to achieve objectives for Pacific salmon which extend beyond fisheries, including habitat restoration and hatchery enhancement, which also occur at a variety of spatial scales.  Indeed, for many SMUs, fisheries have been limited in recent years [@grantStateCanadianPacific2020], such that habitat and hatchery management are playing an increasingly dominant role in management responses. These decisions require stock assessments and responses at a hierarchy of spatial scales from a watershed-level within CUs to larger aggregates of CUs at regional-scales, sometimes across Pacific salmon species. The LRPs presented here are applied at the SMU scale, though methods could also be applied at smaller or larger scales to inform a variety management decisions.
 
 Alternative spatial scales of assessment and management are used by agencies outside of DFO for Pacific salmon, including Designatable Units used by COSEWIC and Management Units under the Pacific Salmon Treaty. These units are not aligned with the biological unit of conservation under DFO's WSP, CU, and are not considered further here.
+
+A mismatch in scales among biological stocks, the unit of management, and the spatial scale of data collection are not uncommon among marine fish species, especially invertebrate species [@dfoProceedingsNationalPeer2016; @mullowneyBiologicalPerspectivesComplexities2020], creating challenges when identifying LRPs [@dfoScienceAdvicePrecautionary2021]. This mismatch can make undesirable states in fish populations difficult to detect, and weaken the effectiveness of resulting management measures. <!--CH: could include snow crab example from Mullowney et al. 2020 if we wanted to flush this out a bit. I couldn't find any refernce for American Lobster- Adam Cook's ppt-->
 
 ## Goals of Working Paper
 
@@ -95,14 +102,6 @@ Following @withlerGeneticallyBasedTargets2018, we recommend including only popul
 For integrated-transition and integrated-wild populations, WSP assessments of status have generally removed the demographic influence of hatchery production from time-series of abundances when data on the proportion of hatchery- vs. natural-origin fish on the spawning grounds are available (e.g., from marking of hatchery-origin fish) [@dfoWildSalmonPolicy2015]. Specifically, the contribution of hatchery-origin fish are removed from both the benchmark estimation and metric of stock status. For stock-recruitment based benchmarks, the contribution of hatchery-origin fish are removed from recruitment estimates but not escapement, as it is assumed that these fish reproduce successfully in the wild and contribute to natural production. This way the spawner-recruitment relationship represents the production derived from spawners in the natural environment. For the current metric of stock status, the contribution of hatchery-origin fish is removed from spawner time-series to remove the influence of variability in annual production from hatcheries on current status [@dfoWildSalmonPolicy2015].
 
 
-
-<!--KH: 
-- Are there examples where aggregate abundance-based LRPs are used for in-season HCRs?  E.g., once an escapement goal has been met, surplus production can be harvested? I'm not sure how often this applies to the SMU level though. Does Fraser Sockeye do anything like this?
-
-- Also, is it worth mentioning cases like Nass / Skeena Sockeye were abundance-based LRPs are required for other management processes (PST), and there is a desire to identify aggregate-abundance based LRPs for those processes that have a high probability of maintaining CU-level abundances above red.
--->
-
-
 In some cases where hatchery-origin fish are not marked, data on the proportion of hatchery-origin fish are not available for integrated-transition and integrated-wild populations. In these cases, WSP assessments generally rely on total spawner abundances regardless of hatchery contribution (e.g., Southern BC Chinook Salmon, @dfoIntegratedBiologicalStatus2016). In these cases, there may be risks that current status reflects hatchery production which masks changes in natural production. These risks are partly mediated but not dismissed by removing populations that are dominated by hatchery-origin fish from assessments.
 
 In addition, some populations without hatcheries may be influenced by straying from out-of-basin hatcheries. A very large fraction of fish are wild but gene flow modelling suggests a long-term increasing in genetic influence of hatcheries as straying increases [@withlerGeneticallyBasedTargets2018]. The impact of these strays are generally not included in assessments in part because of absence of visible marking on hatchery fish or genetic studies to determine their influence, and so they are included in total abundances. Studies evaluating the extent of straying for Chinook Salmon for the West Coast of Vancouver Island are on-going (W. Luedke pers. comm.)
@@ -126,10 +125,15 @@ More generally, LRPs can be used within a Management Procedure Framework (or Man
 A technical working group was developed to capture expertise and knowledge associated with biological basis of serious harm to SMUs to support the development and application of candidate methods for LRPs, composed of DFO and First Nations analysts. The technical working group was not meant to be a venue for engagement or to capture stakeholder perspectives or socioeconomic objectives, considerations that are included when developing management responses to stock assessments.
 
 In particular, the technical working group informed five components of the work: 
+
 1. Principles for the development of Pacific salmon LRPs (make a new chapter)
+
 2. A tool kit of candidate LRP methods (see \@ref(est-methods)
+
 3. A demonstration of the application of candidate LRPs to case studies (see \@ref(case-studies))
+
 4. Recommendations on when, and when not to use each candidate LRP method (see \@ref(guidelines))
+
 5, Recommendations on future research (see \@ref(recommendations))
 
 
