--- a/guidelinesWP/04-chap4.Rmd
+++ b/guidelinesWP/04-chap4.Rmd
@@ -8,7 +8,7 @@ We recommend a step-wise approach for identifying LRPs, with the proportion of c
 
 ### Data Availability (Step 1)
 
-The first step is to compile CU-level data to support biological status assessments as described under the Wild Salmon Policy [@holtIndicatorsStatusBenchmarks2009a; @holtEvaluatingBenchmarksBiological2018b], where those data exist. These data include (but are not limited to) time-series of spawner abundances and biological benchmarks on spawner abundances.  This step generally includes aggregating fine-spatial scale data on stocks or spawning sites to the CU level. In some cases, finer spatial scales (e.g., watersheds within CUs) may be considered to delineate serious harm to the SMU. Although CUs are the population unit of assessment and conservation required under the WSP, distribution of spawning within CUs, for example among watersheds, can be an important component of status and these finer scales can be considered. We recommend that decision on spatial scale of conservation be part of the peer-review process for SMU assessments, and be based on biological principles of serious harm and sustainability (e.g., @bradfordReviewBiologicalPrinciples2004a and @dfoCanadaPolicyConservation2005a). <!--CH: could make this a separate step, or explicit sub-step if we want to further emphasize it-->
+The first step is to compile CU-level data to support biological status assessments as described under the Wild Salmon Policy [@holtIndicatorsStatusBenchmarks2009a; @holtEvaluatingBenchmarksBiological2018b], where those data exist. These data include (but are not limited to) time-series of spawner abundances and biological benchmarks on spawner abundances.  This step generally includes aggregating fine-spatial scale data on stocks or spawning sites to the CU level. In some cases, finer spatial scales (e.g., watersheds within CUs) may be considered to delineate serious harm to the SMU. Although CUs are the population unit of assessment and conservation required under the WSP, distribution of spawning within CUs, for example among watersheds, can be an important component of status and these finer scales can be considered. We recommend that decision on spatial scale of conservation be part of the peer-review process for SMU assessments, and be based on biological principles of serious harm and sustainability (e.g., @bradfordReviewBiologicalPrinciples2004 and @dfoCanadaPolicyConservation2005a). <!--CH: could make this a separate step, or explicit sub-step if we want to further emphasize it-->
 
 
 <!--CH: this next pgh needs to be reworked and shortened given the section in the Intro. Same for the section in the WCVK CK case study-->
@@ -116,11 +116,16 @@ The frequency of SMU-scale peer reviews outside of the annual implementation of 
 ### Are Aggregate Abundance-Based LRPs Required For Fisheries Management? (Step 7)
 <!--CH incorporate considerations when preferred-->
 
-LRPs can be used to inform a variety of management decisions (as described in the section, \@ref(roleLRPs)).  Although proportion-based LRPS are sufficient under Fish Stock provisions for Pacific salmon, alternative, abundance-based LRPs may be required for fisheries management decision making. For SMUs where harvest is a dominant driver of population dynamics and restricting fisheries harvest is a principle lever, an LRP along the metric of aggregate abundances of the SMU may support precautionary management. For example, when LRPs are used to inform a harvest control rule, fishing pressure can be gradually curtailed as aggregate abundances drop towards the LRP to avoid depletion below it. Aggregate-based benchmarks may in some cases be required for local or international management. However, harvest management can occur at a variety of spatial scales, including e.g., spatial closures to protect indiviudal CUs. Therefore to align with harvest management needs it is often not necessary to aggregate status to the SMU level. The choice to develop an aggregate-abundance based LRP depends on the decision context, and should be made in collaboration with various sectors responsible for management decisions within the SMU. 
+LRPs can be used to inform a variety of management decisions (as described in the section, \@ref(roleLRPs)).  Although proportion-based LRPS are sufficient under Fish Stock provisions for Pacific salmon, alternative, abundance-based LRPs may be required for fisheries management decision making. For SMUs where harvest is a dominant driver of population dynamics and restricting fisheries harvest is a principle lever, an LRP along the metric of aggregate abundances of the SMU may support precautionary management. For example, when LRPs are used to inform a harvest control rule, fishing pressure can be gradually curtailed as aggregate abundances drop towards the LRP to avoid depletion below it. Aggregate-based benchmarks may in some cases be required for local or international management. For example, for Nass and Skeena Sockeye aggregate escapement goals are required under the Pacific Salmon Treaty (ref)<!--CH add ref-->, though to comply with the WSP, the status of component CUs should also be considered. 
 
-Aggregate-abundance based LRPs are scientifically derived quantities that delineate serious harm to an SMU following the principles outlined in the \@ref(est-methods). Although these LRPs can inform harvest control rules, harvest management decisions require consideration of multiple objectives beyond those associated with conservation and serious harm (e.g., socioeconomic objectives). Furthermore, harvest control rules that use a variety of management levers can be developed independent of aggregate-abundance based LRPs. For example, time-area closures limiting harvest on specific CUs and hatchery and habitat enhancement can be implemented to support CU-specific  objectives and achieve proportion-based LRPs regardless of aggregate abundances.
 
-If aggregate-abundance based LRPs are not required, assessment of the SMU would be provided from steps 1-6. The following steps (8-12) are relevant if aggregate-abundance based LRPs are required, and build on proportion-based LRPs derived in the previous steps. 
+
+However, if an LRP is defined within the context of a Management Procedure framework (see Section \@ref(intro)), then an aggregate abundance-based LRP may not be required if the framework can demonstrate the probability of individual CUs falling below lower benchmarks for various management options. For salmon, management procedures extend beyond harvest control rules to include time-area closures, habitat enhancement or hatchery supplementation to protect individual CUs. Therefore, the choice to develop an aggregate-abundance based LRP depends on the decision context, and should be made in collaboration with various sectors responsible for management decisions within the SMU. If aggregate-abundance based LRPs are not required, assessment of the SMU would be provided from steps 1-6. The following steps (8-12) are relevant if aggregate-abundance based LRPs are required, and build on proportion-based LRPs derived in the previous steps. 
+
+
+
+Like proportion-based LRPs, aggregate-abundance based LRPs are scientifically derived quantities that delineate serious harm to an SMU following the principles outlined in the \@ref(est-methods). Although these LRPs can inform harvest control rules, harvest management decisions require consideration of multiple objectives beyond those associated with conservation and serious harm (e.g., socioeconomic objectives). 
+
 
 
 <!-- CW May be appropriate to Subdivide these steps within two sub sections: proportional based LRPS and aggregate abundance based LRPs -->
