--- a/guidelinesWP/bib/refs.bib
+++ b/guidelinesWP/bib/refs.bib
@@ -162,6 +162,21 @@
   file = {C\:\\Users\\HoltC\\Zotero\\storage\\5NCHAIEA\\Carwardine et al. - 2019 - Priority Threat Management for biodiversity conser.pdf}
 }
 
+@article{chagarisEcologicalReferencePoints2020,
+  title = {Ecological {{Reference Points}} for {{Atlantic Menhaden Established Using}} an {{Ecosystem Model}} of {{Intermediate Complexity}}},
+  author = {Chagaris, David and Drew, Katie and Schueller, Amy and Cieri, Matt and Brito, Joana and Buchheister, Andre},
+  year = {2020},
+  month = nov,
+  journal = {Frontiers in Marine Science},
+  volume = {7},
+  pages = {606417},
+  issn = {2296-7745},
+  doi = {10.3389/fmars.2020.606417},
+  abstract = {Atlantic menhaden (Brevoortia tyrannus) are an important forage fish for many predators, and they also support the largest commercial fishery by weight on the U.S. East Coast. Menhaden management has been working toward ecological reference points (ERPs) that account for menhaden's role in the ecosystem. The goal of this work was to develop menhaden ERPs using ecosystem models. An existing Ecopath with Ecosim model of the Northwest Atlantic Continental Shelf (NWACS) was reduced in complexity from 61 to 17 species/functional groups. The new NWACS model of intermediate complexity for ecosystems (NWACS-MICE) serves to link the dynamics of menhaden with key managed predators. Striped bass (Morone saxatilis) were determined to be most sensitive to menhaden harvest and therefore served as an indicator of ecosystem impacts. ERPs were based on the tradeoff relationship between the equilibrium biomass of striped bass and menhaden fishing mortality (F). The ERPs were defined as the menhaden F rates that maintain striped bass at their biomass target and threshold when striped bass are fished at their Ftarget, and all other modeled species were fished at status quo levels. These correspond to an ERP Ftarget of 0.19 and an ERP Fthreshold of 0.57, which are lower than the single species reference points by 30\textendash 40\%, but higher than current (2017) menhaden F. The ERPs were then fed back into the agestructured stock assessment model projections to provide information on total allowable catch. The ERPs developed in this study were adopted by the Atlantic menhaden Management Board, marking a shift toward ecosystem-based fishery management for this economically and ecologically important species.},
+  langid = {english},
+  file = {C\:\\Users\\HoltC\\Zotero\\storage\\DWC9AL6X\\Chagaris et al. - 2020 - Ecological Reference Points for Atlantic Menhaden .pdf}
+}
+
 @techreport{chaputConsiderationsDefiningReference2012,
   type = {{{DFO Can}}. {{Sci}}. {{Advis}}. {{Sec}}. {{Res}}. {{Doc}}.},
   title = {Considerations for Defining Reference Points for Semelparous Species, with Emphasis on Anadromous Salmonid Species Including Iteroparous Salmonids},
@@ -243,6 +258,22 @@
   file = {C\:\\Users\\HoltC\\Zotero\\storage\\Q5YDV545\\Cunningham et al. - 2013 - Size Selectivity of Predation by Brown Bears Depen.pdf}
 }
 
+@article{debertinMarineGrowthPatterns2017,
+  title = {Marine Growth Patterns of Southern {{British Columbia}} Chum Salmon Explained by Interactions between Density-Dependent Competition and Changing Climate},
+  author = {Debertin, Allan J. and Irvine, James R. and Holt, Carrie A. and Oka, Gladys and Trudel, Marc},
+  year = {2017},
+  month = jul,
+  journal = {Canadian Journal of Fisheries and Aquatic Sciences},
+  volume = {74},
+  number = {7},
+  pages = {1077--1087},
+  issn = {0706-652X, 1205-7533},
+  doi = {10.1139/cjfas-2016-0265},
+  abstract = {Thirty-nine years of scale growth measurements from Big Qualicum River chum salmon (Oncorhynchus keta) in southern British Columbia demonstrated that competition and climate variation affect marine growth and age-at-maturity. A longitudinal study design that accounted for correlation among individuals revealed growth at all ages was reduced when the biomass of North American chum, sockeye (Oncorhynchus nerka), and pink salmon (Oncorhynchus gorbuscha) was high. When North Pacific Gyre Oscillation (NPGO) was positive, indicating increased primary productivity, predicted growth increased. Climate variation influenced competition effects. For instance, density-dependent competition effects increased when NPGO became more positive and Pacific Decadal Oscillation became more negative (indicating cool conditions), causing the greatest range in predicted scale size. Chum salmon are likely to exhibit continued reduction in growth at age due to increased ocean temperatures driven by climate change and high aggregate salmon biomass that includes hatchery releases. If evidence of biomass and climate effects presented here are common among Pacific salmon populations, reduction of hatchery releases should be considered.},
+  langid = {english},
+  file = {C\:\\Users\\HoltC\\Zotero\\storage\\WE5J4EFQ\\Debertin et al. - 2017 - Marine growth patterns of southern British Columbi.pdf}
+}
+
 @article{defilippoImprovingShorttermRecruitment2021,
   title = {Improving Short-Term Recruitment Forecasts for Coho Salmon Using a Spatiotemporal Integrated Population Model},
   author = {DeFilippo, Lukas B. and Buehrens, Thomas W. and Scheuerell, Mark and Kendall, Neala W. and Schindler, Daniel E.},
@@ -316,6 +347,17 @@
   abstract = {For data-limited stocks, data are often insufficient to use traditional stock assessments to determine stock status relative to biological reference points.},
   langid = {english},
   file = {C\:\\Users\\HoltC\\Zotero\\storage\\5P7KAL8R\\A Management Procedure Framework for Groundfish In.pdf}
+}
+
+@techreport{dfoProceedingsNationalWorkshop2013,
+  type = {{{DFO Can}}. {{Sci}}. {{Advis}}. {{Sec}}. {{Proceed}}. {{Ser}}.},
+  title = {Proceedings of the {{National Workshop}} for {{Technical Expertise}} in {{Stock Assessment}} ({{TESA}}): {{Maximum Sustainable Yield}} ({{MSY}}) {{Reference Points}} and the {{Precautionary Approach}} When {{Productivity Varies}}; {{December}} 13-15, 2011},
+  author = {{DFO}},
+  year = {2013},
+  number = {2012/055.},
+  pages = {58},
+  langid = {english},
+  file = {C\:\\Users\\HoltC\\Zotero\\storage\\73BMV67Q\\Proceedings of the National Workshop for Technical.pdf}
 }
 
 @techreport{dfoScienceAdvicePrecautionary2021,
@@ -507,6 +549,18 @@
   doi = {10.1016/j.fishres.2015.01.002},
   langid = {english},
   file = {C\:\\Users\\HoltC\\Zotero\\storage\\G2M7RGZB\\Holt and Folkes - 2015 - Cautions on using percentile-based benchmarks of s.pdf}
+}
+
+@article{holtEvaluatingBenchmarksBiological2018,
+  title = {Evaluating {{Benchmarks}} of {{Biological Status}} for {{Data-limited Conservation Units}} of {{Pacific Salmon}}, {{Focusing}} on {{Chum Salmon}} in {{Southern BC}}},
+  author = {Holt, Carrie and Davis, Brooke and Dobson, Diana and Godbout, Lyse and Luedke, Wilf and Tadey, Joe and Van Will, P},
+  year = {2018},
+  journal = {DFO Can. Sci. Advis. Sec. Res. Doc.},
+  volume = {2018/011},
+  pages = {ix + 77},
+  abstract = {Status assessments for Chum Salmon (Oncorhynchus keta) under the Wild Salmon Policy (WSP) have been limited, in part because recruitment time-series required to calculate stock- recruitment based benchmarks are not consistently available. Alternative benchmarks have been proposed for data-limited Conservation Units (CUs) using percentiles of the observed spawner abundance time-series. However, these benchmarks have not been evaluated against stock-recruitment benchmarks currently used to assess status on abundances for data-rich CUs. Our goals were to evaluate percentile-based benchmarks against stock-recruitment based benchmarks accounting for high uncertainties and possible biases in spawner abundances, catches, recruitment estimates, and age-at-maturity. We used two approaches to evaluate benchmarks based on a retrospective comparison through the historical record and a prospective simulation model under numerous hypothetical future scenarios. We demonstrate an approach for providing assessments that accounts for uncertainties in benchmarks, and provide advice on the applicability of percentile-based benchmarks for data-limited CUs of Chum Salmon relative to stock-recruitment benchmarks used for data-rich CUs. In general, our results support the application of percentile-based benchmarks for data-limited CUs of Chum Salmon when productivity is moderate to high ({$>$}2.5 recruits/spawner) and harvest rates are low to moderate ({$\leq$}40\%). However, we suggest further evaluation of percentile benchmarks (and the consideration of alternatives) when productivity is expected to be low and/or harvest rates high. Under these conditions, concurrent declines in abundances and percentile benchmarks can results in status assessments that are more optimistic than those from stock-recruitment benchmarks due to shifting baselines.},
+  langid = {english},
+  file = {C\:\\Users\\HoltC\\Zotero\\storage\\SWJCIYX6\\Holt et al. - Evaluating Benchmarks of Biological Status for Dat.pdf}
 }
 
 @techreport{holtEvaluationBenchmarksConservation2009,
@@ -791,6 +845,22 @@
   file = {C\:\\Users\\HoltC\\Zotero\\storage\\K6R7JARU\\Price et al. - 2021 - Portfolio simplification arising from a century of.pdf}
 }
 
+@article{puntEssentialFeaturesNextgeneration2020a,
+  title = {Essential Features of the Next-Generation Integrated Fisheries Stock Assessment Package: {{A}} Perspective},
+  shorttitle = {Essential Features of the Next-Generation Integrated Fisheries Stock Assessment Package},
+  author = {Punt, Andr{\'e} E. and Dunn, Alistair and Elvarsson, Bjarki {\TH}{\'o}r and Hampton, John and Hoyle, Simon D. and Maunder, Mark N. and Methot, Richard D. and Nielsen, Anders},
+  year = {2020},
+  month = sep,
+  journal = {Fisheries Research},
+  volume = {229},
+  pages = {105617},
+  issn = {01657836},
+  doi = {10.1016/j.fishres.2020.105617},
+  abstract = {Integrated analysis (or integrated population modelling) methods have become the preferred approach for conducting stock assessments, and providing the basis for management advice for fish and invertebrate stocks since the publication of a seminal paper by Fournier and Archibald in 1982. Methods to assess fish stocks based on single-species, single-area, age-structured models are now standard, with the major debates associated with these models related to data choice, model configuration assumptions, and data weighting. However, the current generation of stock assessment packages is not addressing all of the needs of stock assessment analysts and managers. A major challenge for any next-generation stock assessment package is the set of extensions needed to assess stocks that do not satisfy the `well-mixed single-stock' paradigm. In addition, the next-generation stock assessment package needs to: (a) be able to capture age and size/stage dynamics simultaneously yet computationally efficiently, (b) scale from data-rich to data-poor, (c) include some multi-species capability, and (d) more appropriately deal with temporal variation (e.g., random effects and state-space models). In relation to data, there is a need to ensure that the next-generation stock assessment package better handles tagging data (agesize/stage models may help in this regard), in particular, to be able to use close-kin mark-recapture data. Efficient methods are needed to share parameter priors among stocks (satisfying the promise of the `Robin Hood' paradigm). The next-generation stock assessment package needs to have associated appropriate training programs and documentation. Adoption of such a package will be facilitated by a data entry system that is welldocumented, does not require specification of inputs that will not be used in an application, has an expert system to configure default settings based on best practices, and has associated code to automatically produce diagnostic statistics. Some technical challenges that have plagued stock assessment for decades warrant continued attention (at the theoretical and applied level) such as automatic data weighting and tuning, how to handle spatial and stock structure, improved coding to facilitate application of state-of-the-art methods for quantifying uncertainty, and adoption of true state-space formulations to allow more parameters to be treated as random effects. Future needs for features cannot be anticipated, so the key design consideration for the next-generation stock assessment package is to be flexible and modifiable to meet the requirements of analysts and users.},
+  langid = {english},
+  file = {C\:\\Users\\HoltC\\Zotero\\storage\\FTCVD7G5\\Punt et al. - 2020 - Essential features of the next-generation integrat.pdf}
+}
+
 @article{puntFisheriesManagementClimate2014,
   title = {Fisheries Management under Climate and Environmental Uncertainty: Control Rules and Performance Simulation},
   shorttitle = {Fisheries Management under Climate and Environmental Uncertainty},
@@ -816,6 +886,34 @@
   month = jan,
   publisher = {{Oxford University Press}},
   abstract = {Open access (or the " tragedy of the commons ") is a well-known explanation of fish stock depletion and of overcapacity. This chapter focuses on the complexity of proper management of the commons, specifically, policies to control total allowable catch (TAC) and total harvesting capacity: what are the major challenges, why is it easy for policy makers to misperceive, and how can communication be improved to ensure more rapid learning? Section 45.2 deals with the problem of overcapacity and resource depletion in the process of adapting fishing industries to resource limits. Section 45.3 considers " steady-state " strategies for controlling TAC and total capacity in fisheries with environmental variation. Section 45.4 deals with implications of assessment error for steady-state policies. Finally, section 45.5 discusses boundaries of models and methods and calls for balanced interdisciplinary analysis, and section 45.6 concludes.}
+}
+
+@article{reidTwoEyedSeeingIndigenous2020,
+  title = {``{{Two-Eyed Seeing}}'': {{An Indigenous}} Framework to Transform Fisheries Research and Management},
+  shorttitle = {``{{Two-Eyed Seeing}}''},
+  author = {Reid, Andrea J. and Eckert, Lauren E. and Lane, John-Francis and Young, Nathan and Hinch, Scott G. and Darimont, Chris T. and Cooke, Steven J. and Ban, Natalie C. and Marshall, Albert},
+  year = {2020},
+  journal = {Fish and Fisheries},
+  volume = {n/a},
+  number = {n/a},
+  issn = {1467-2979},
+  doi = {10.1111/faf.12516},
+  abstract = {Increasingly, fisheries researchers and managers seek or are compelled to ``bridge'' Indigenous knowledge systems with Western scientific approaches to understanding and governing fisheries. Here, we move beyond the all-too-common narrative about integrating or incorporating (too often used as euphemisms for assimilating) other knowledge systems into Western science, instead of building an ethic of knowledge coexistence and complementarity in knowledge generation using Two-Eyed Seeing as a guiding framework. Two-Eyed Seeing (Etuaptmumk in Mi'kmaw) embraces ``learning to see from one eye with the strengths of Indigenous knowledges and ways of knowing, and from the other eye with the strengths of mainstream knowledges and ways of knowing, and to use both these eyes together, for the benefit of all,'' as envisaged by Elder Dr. Albert Marshall. In this paper, we examine the notion of knowledge dichotomies and imperatives for knowledge coexistence and draw parallels between Two-Eyed Seeing and other analogous Indigenous frameworks from around the world. It is set apart from other Indigenous frameworks in its explicit action imperative\textemdash central to Two-Eyed Seeing is the notion that knowledge transforms the holder and that the holder bears a responsibility to act on that knowledge. We explore its operationalization through three Canadian aquatic and fisheries case-studies that co-develop questions, document and mobilize knowledge, and co-produce insights and decisions. We argue that Two-Eyed Seeing provides a pathway to a plural coexistence, where time-tested Indigenous knowledge systems can be paired with, not subsumed by, Western scientific insights for an equitable and sustainable future.},
+  copyright = {\textcopyright{} 2020 The Authors. Fish and Fisheries published by John Wiley \& Sons Ltd},
+  langid = {english},
+  keywords = {co-production,Etuaptmumk,indigenous knowledge,knowledge coexistence,pluralism,Western science},
+  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/faf.12516},
+  file = {C\:\\Users\\HoltC\\Zotero\\storage\\GY7PKW5M\\faf.12516.pdf;C\:\\Users\\HoltC\\Zotero\\storage\\9HK85ESI\\faf.html}
+}
+
+@techreport{sainsburyBestPracticeReference2008,
+  title = {Best {{Practice}} Reference {{Points}} for {{Australian Fisheries}}},
+  author = {Sainsbury, Keith},
+  year = {2008},
+  number = {A Report to Australian Fisheries Management Authority and the Department of the Environment and Heritage},
+  pages = {173},
+  langid = {english},
+  file = {C\:\\Users\\HoltC\\Zotero\\storage\\YJ24U3CM\\Sainsbury - Best Practice reference Points for Australian Fish.pdf}
 }
 
 @article{scheuerellIntegratedPopulationModel2021,
@@ -849,6 +947,17 @@
   file = {C\:\\Users\\HoltC\\Zotero\\storage\\7L7ZL3RC\\Schindler et al. - 2010 - Population diversity and the portfolio effect in a.pdf}
 }
 
+@article{sheltonLimitsOverfishingReference2002,
+  title = {Limits to Overfishing: Reference Points in the Context of the {{Canadian}} Perspective on the Precautionary Approach - {{Limites}} de Surp\^eche : Points de R\'ef\'erence Dans Le Contexte de La Perspective Du {{Canada}} En Mati\`ere d'approche de Pr\'ecaution},
+  author = {Shelton, Peter A and Rice, Jake C},
+  year = {2002},
+  journal = {DFO Can. Sci. Advis. Sec. Res. Doc.},
+  number = {2002/084},
+  pages = {30},
+  langid = {english},
+  file = {C\:\\Users\\HoltC\\Zotero\\storage\\AMR4H3FQ\\Shelton and Rice - Limits to overfishing reference points in the con.pdf}
+}
+
 @article{statonIncorporatingDemographicInformation2021,
   title = {Incorporating Demographic Information into Spawner\textendash Recruit Analyses Alters Biological Reference Point Estimates for a Western {{Alaska}} Salmon Population},
   author = {Staton, Benjamin A. and Catalano, Matthew J. and Fleischman, Steven J. and Ohlberger, Jan},
@@ -865,6 +974,21 @@
   file = {C\:\\Users\\HoltC\\Zotero\\storage\\SHMSYNZE\\Staton et al. - 2021 - Incorporating demographic information into spawner.pdf}
 }
 
+@article{statonSequentialIntegratedBayesian2017a,
+  title = {From Sequential to Integrated {{Bayesian}} Analyses: {{Exploring}} the Continuum with a {{Pacific}} Salmon Spawner-Recruit Model},
+  shorttitle = {From Sequential to Integrated {{Bayesian}} Analyses},
+  author = {Staton, Benjamin A. and Catalano, Matthew J. and Fleischman, Steven J.},
+  year = {2017},
+  month = feb,
+  journal = {Fisheries Research},
+  volume = {186},
+  pages = {237--247},
+  issn = {01657836},
+  doi = {10.1016/j.fishres.2016.09.001},
+  langid = {english},
+  file = {C\:\\Users\\HoltC\\Zotero\\storage\\TYL7TIY9\\Staton et al. - 2017 - From sequential to integrated Bayesian analyses E.pdf}
+}
+
 @article{szuwalskiClimateChangeNonstationary2016,
   title = {Climate Change and Non-Stationary Population Processes in Fisheries Management},
   author = {Szuwalski, Cody S. and Hollowed, Anne B.},
@@ -879,6 +1003,11 @@
   abstract = {The potential influence of climate change on the future distribution and abundance of fish (and therefore commercial fisheries and food security) is increasingly recognized in the fishery management community. A changing climate will likely have differing effects on different species; some will flourish, some will flounder. Management targets for fishing mortality and spawning biomass are often calculated by assuming stationary population processes, but under climate change, this assumption may be violated. Non-stationary population processes can introduce bias into estimates of biomass from stock assessments and calculations of target fishing mortalities and biomasses. However, few accepted frameworks exist for incorporating the changing influence of the environment on exploited populations into management strategies. Identifying changes in population processes due to environmental influences is important in order to enable climate-enhanced management strategy evaluations to elucidate the potential benefits and costs of changing management targets. Cost/benefit analyses will also be useful when coincidentally caught species respond differently to environmental change.},
   langid = {english},
   file = {C\:\\Users\\HoltC\\Zotero\\storage\\AIQKL8VN\\Szuwalski and Hollowed - 2016 - Climate change and non-stationary population proce.pdf}
+}
+
+@misc{USCodeFederal2021,
+  title = {{{US Code}} of {{Federal Regulations}}},
+  year = {2021}
 }
 
 @techreport{withlerGeneticallyBasedTargets2018,
